# Laura_CPP

./: CMakeLists.txt  main.cpp
headers/: NeuralLayer.h  NumberPredictor.h  neural_utils.cpp  neural_utils.h
headers/math/: Matrix.h
src/: NeuralLayer.cpp  NumberPredictor.cpp
src/math/: Matrix.cpp
